# myetal

./: .env.example  .gitignore  README.md  app.json  docker-compose.staging.yml  docker-compose.yml  eas.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/api/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  alembic.ini  pyproject.toml  railway.json
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260426_1200_0001_baseline.py  20260426_1300_0002_mixed_share_items.py  20260427_1000_0003_works_library_foundation.py  20260427_1100_0004_discovery_foundation.py  20260427_1200_0005_feedback.py  20260427_1300_0006_user_avatar_url.py  20260427_1400_0007_pg_trgm_search_indexes.py  20260427_1500_0008_browse_published_at_index.py  20260507_1000_0009_add_orcid_id_to_users.py  20260507_1100_0010_add_last_orcid_sync_at_to_users.py  20260507_1200_0011_rename_share_kind_poster_to_bundle.py  20260507_1300_0012_add_tags_and_share_tags.py  20260508_1000_0013_add_pg_trgm_index_users_name.py  20260508_1100_0014_add_pdf_item_kind_and_columns.py  20260508_1200_0015_add_copyright_ack_at.py  20260508_1300_0016_better_auth_cutover.py  20260511_1000_0017_admin_audit_table.py  20260511_1010_0018_user_deleted_at.py  20260511_1100_0019_system_metrics_tables.py
apps/api/scripts/: _wrapper.py  cleanup_refresh_tokens.py  gc_tombstoned_shares.py  prune_share_views.py  refresh_similar_shares.py  refresh_trending.py
apps/api/src/ceteris_api/: main.py  oauth_providers.py
apps/api/src/ceteris_api/api/: deps.py
apps/api/src/ceteris_api/core/: config.py  database.py  oauth.py  observability.py  security.py
apps/api/src/ceteris_api/models/: __init__.py  auth_identity.py  refresh_token.py  share.py  social.py  user.py
apps/api/src/ceteris_api/schemas/: auth.py  papers.py  share.py  user.py
apps/api/src/ceteris_api/services/: auth.py  oauth.py  papers.py  share.py
apps/api/src/myetal_api/: main.py  oauth_providers.py
apps/api/src/myetal_api/api/: deps.py
apps/api/src/myetal_api/core/: ba_security.py  config.py  database.py  oauth.py  observability.py  rate_limit.py  request_metrics.py  security.py
apps/api/src/myetal_api/models/: __init__.py  admin_audit.py  auth_identity.py  better_auth.py  feedback.py  orcid_sync_run.py  paper.py  refresh_token.py  request_metrics.py  script_run.py  share.py  share_paper.py  share_report.py  share_similar.py  share_view.py  social.py  tag.py  trending_share.py  user.py  user_paper.py
apps/api/src/myetal_api/schemas/: admin.py  auth.py  papers.py  share.py  user.py  works.py
apps/api/src/myetal_api/services/: admin_audit.py  admin_overview.py  admin_shares.py  admin_system.py  admin_users.py  auth.py  oauth.py  orcid_client.py  papers.py  pdf_thumb.py  r2_client.py  share.py  share_view.py  share_view_dedup.py  tags.py  telegram.py  users.py  works.py
apps/api/src/quire_api/: main.py
apps/api/src/quire_api/api/: deps.py
apps/api/src/quire_api/core/: config.py  database.py  security.py
apps/api/tests/: conftest.py  test_admin.py  test_admin_overview.py  test_admin_shares.py  test_admin_system.py  test_admin_users.py  test_auth_contract.py  test_auth_routes.py  test_auth_service.py  test_browse.py  test_feedback.py  test_health.py  test_health_readiness.py  test_me_routes.py  test_models.py  test_oauth.py  test_oauth_routes.py  test_observability.py  test_orcid_client.py  test_papers.py  test_pdf_thumb.py  test_pdf_upload_routes.py  test_r2_client.py  test_rate_limit.py  test_reports.py  test_search.py  test_security.py  test_sessions.py  test_share_service.py  test_tags_service.py  test_view_tracking.py  test_works.py
apps/api/tests/core/: test_ba_security.py
apps/api/tests/services/: test_users.py
apps/mobile/: EAS.md  (+5 more)
(+303 files in other folders)
